--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Neha Nair\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
