--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -35,6 +35,7 @@
     "-  Make sure what you're measuring (variables) to answer the question is clear\n",
     "\n",
     "This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences). When we read this we should know clearly what your project will be about\n",
+    "What specific factors have carried the greatest weight in driving novels in the 'Paperback Nonfiction' category to reach 'New York Times Bestseller' status from 2020 to 2023?\n",
     "\n"
    ]
   },
