--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -87,10 +87,8 @@
     "- Ensure that this hypothesis is clear to readers\n",
     "- Explain why you think this will be the outcome (what was your thinking?)\n",
     "\n",
-    "Our null hypothesis is that there are no specific factors that significantly influence a novel's likelihood of reaching<br>
-     'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023. Our alternative hypothesis is that<br>
-     books that include current events are more likely to reach 'New York Times Bestseller' status in the 'Paperback Nonfiction' category<br>
-     from 2020 to 2023."
+    "Our null hypothesis is that there are no specific factors that significantly influence a novel's likelihood of reaching'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023.\n",
+    "Our alternative hypothesis is that books that include current events are more likely to reach 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023."
    ]
   },
   {
