--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -14,7 +14,7 @@
     "# Names\n",
     "\n",
     "- Neha Nair\n",
-    "- Hulk\n",
+    "- Advika Shankar\n",
     "- Iron Man\n",
     "- Thor\n",
     "- Wasp"
