--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -82,8 +82,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our null hypothesis is that there are no specific factors that significantly influence a novel's likelihood of reaching 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023.\n",
-    "Our alternative hypothesis is that books that include current events are more likely to reach 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023. We will be using a significance level (alpha) of 0.05.\n",
+    "Our null hypothesis is that there is no specific factor that significantly influences a novel's likelihood of reaching 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023.\n",
+    "Our alternative hypothesis is that books that include or reference current events are more likely to reach 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023. We will be using a significance level (alpha) of 0.05.\n",
     "\n",
     "We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n", 
     "Since our data set includes a presidential election year, 2020, we think this factor would strongly impact the likelihood of a nonfiction novel gaining popularity and becoming a 'New York Times Bestseller' from 2020 to 2023.\n", 
