--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -85,9 +85,10 @@
     "Our null hypothesis is that none of the factors (inclusion of current events, author credibility, number of reader reviews, number of awards received, appearance on a celebrity book club list, or publication timing/season) significantly influence a novel's likelihood of reaching 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023.\n",
     "Our alternative hypothesis is that at least one of the factors significantly influences a novel's likelihood of reaching 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023. We will be using a significance level (alpha) of 0.05.\n",
     "\n",
-    "In particular, we think that the inclusion of current events most significantly impacts a paperback nonfiction book's likelihood of ending up on the "New York Times Bestseller" list. We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n", 
+    "In particular, we think that the inclusion of current events most significantly impacts a paperback nonfiction book's likelihood of ending up on the 'New York Times Bestseller' list.\n",
+    "We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n", 
     "Since our data set includes a presidential election year, 2020, we think this factor would strongly impact the likelihood of a nonfiction novel gaining popularity and becoming a 'New York Times Bestseller' from 2020 to 2023.\n", 
-    "Essentially, we are assuming that people who aren't regular nonfiction readers would typically only become interested in this genre when seeking to increase their awareness of current events.\n"  
+    "Essentially, we are assuming that people who aren't regular nonfiction readers would typically only become interested in this genre when seeking to increase their awareness of current events."  
    ]
   },
   {
