edited research question

--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -31,9 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What specific factors have carried the greatest weight in driving novels in the 'Paperback Nonfiction' category to reach 'New York Times Bestseller' status from 2020 to 2023?\n", 
+    "What specific factors have carried the greatest weight in driving novels in the 'Paperback Nonfiction' category to reach 'New York Times Bestseller' status from 2020 to 2023?\n",
     "\n",
-    "The factors we will be exploring are the inclusion of current events in the novel, author credibility/experience, number of reader reviews (Goodreads), number of awards received, appearance on a celebrity book club list, and publication timing/season.\n",
+    "The factors we will be exploring are the inclusion of current events in the novel, author credibility/experience, number of reader reviews (Goodreads), number of awards received, appearance on a celebrity book club list, and publication timing (season).\n",
     "\n"
    ]
   },
@@ -86,9 +86,9 @@
     "Our alternative hypothesis is that at least one of the factors significantly influences a novel's likelihood of reaching 'New York Times Bestseller' status in the 'Paperback Nonfiction' category from 2020 to 2023. We will be using a significance level (alpha) of 0.05.\n",
     "\n",
     "In particular, we think that the inclusion of current events most significantly impacts a paperback nonfiction book's likelihood of ending up on the 'New York Times Bestseller' list.\n",
-    "We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n", 
-    "Since our data set includes a presidential election year, 2020, we think this factor would strongly impact the likelihood of a nonfiction novel gaining popularity and becoming a 'New York Times Bestseller' from 2020 to 2023.\n", 
-    "Essentially, we are assuming that people who aren't regular nonfiction readers would typically only become interested in this genre when seeking to increase their awareness of current events."  
+    "We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n",
+    "Since our data set includes a presidential election year, 2020, we think this factor would strongly impact the likelihood of a nonfiction novel gaining popularity and becoming a 'New York Times Bestseller' from 2020 to 2023.\n",
+    "Essentially, we are assuming that people who aren't regular nonfiction readers would typically only become interested in this genre when seeking to increase their awareness of current events."
    ]
   },
   {
@@ -195,9 +195,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
