--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- Neha Nair\n",
     "- Advika Shankar\n",
-    "- Iron Man\n",
+    "- Pranav Kumar Soma\n",
     "- Thor\n",
     "- Wasp"
    ]
