Updated Data section

--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -16,7 +16,7 @@
     "- Neha Nair\n",
     "- Advika Shankar\n",
     "- Pranav Kumar Soma\n",
-    "- Thor\n",
+    "- Satya Rajendra\n",
     "- Wasp"
    ]
   },
@@ -104,8 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Explain what the **ideal** dataset you would want to answer this question. (This should include: What variables? How many observations? Who/what/how would these data be collected? How would these data be stored/organized?)\n",
-    "1. Search for potential **real** datasets that could provide you with something useful for this project.  You do not have to find every piece of data you will use, but you do need to have demonstrated some idea that (a) this data is gettable and (b) that this data may be different from what your ideal is."
+    "1. The ideal dataset would be one that included every NYT bestseller from 2020 to 2023 in the 'Paperback Nonfiction' category along with current events going on at the time, author credibility/experience, number of reviews on Goodreads, number of awards received, whether it appeared on a celebrity book club list, and the publication timing/season. Another variable that could be useful would be one that showed how popular the book was during it's time on the list of bestsellers, preferably based off of hundreds or even thousands of reviews. The data would be collected through various website using web-scraping to find the info desired. The data would be stored in a large table. \n",
+    "1. There doesn't appear to be a dataset that nicely has most or all the information we need, so we'll most likely be web-scraping for the different bits of information using the list of past bestsellers. https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/"
    ]
   },
   {
