Updating Ethics and Privacy section

--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -17,7 +17,7 @@
     "- Advika Shankar\n",
     "- Pranav Kumar Soma\n",
     "- Satya Rajendra\n",
-    "- Wasp"
+    "- Navyaa Gupta"
    ]
   },
   {
@@ -119,17 +119,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Thoughtful discussion of ethical concerns included\n",
-    "- Ethical concerns consider the whole data science process (question asked, data collected, data being used, the bias in data, analysis, post-analysis, etc.)\n",
-    "- How your group handled bias/ethical concerns clearly described\n",
-    "\n",
-    "Acknowledge and address any ethics & privacy related issues of your question(s), proposed dataset(s), and/or analyses. Use the information provided in lecture to guide your group discussion and thinking. If you need further guidance, check out [Deon's Ethics Checklist](http://deon.drivendata.org/#data-science-ethics-checklist). In particular:\n",
-    "\n",
-    "- Are there any biases/privacy/terms of use issues with the data you propsed?\n",
-    "- Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)\n",
-    "- How will you set out to detect these specific biases before, during, and after/when communicating your analysis?\n",
-    "- Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
-    "- How will you handle issues you identified?"
+    "A bias that may be present in our data is in the factors of appearance on a celebrity book club list and number of reader reviews on goodreads because other factors can influence participation in these forums. Potential factos could be age, class, level of online activity. To mitigate this potential bas we will clearly label factors that might have population bias.",
+    "Another ethical concern with our project is equitable representation of different demographic groups. Our project focuses on books in the Paperback Nonfiction genre that have reached bestseller status. An issue with this is that our analysis may intentionally favor certain authors and books with access to larger marketing campaigns. To combat this we will not generalize our findings to the overall genre of nonfiction and focus on the New York Times Bestsellers only."
+    "Another issue that may arise is privacy concerns when collecting data from The New York Times. When web-scraping, we will ensure to follow The New York Times' terms of use and not include any user-identifiable information in our project.",
+    "We will report any potential biases in our report in order to be transparent with readers of our project. We will check for bias in our data pre-analysis, during analysis, and post-analysis by identifying any skew in the data used and highlight it in our report. Additionally, when drawing conclusions from our analysis, we will position them as correlations rather than causations in order to acknowledge the limitations of conclusions that can de drawn with our data set."
    ]
   },
   {
