Update Team expectations

--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -142,7 +142,7 @@
     "* *Team members will communicate bluntly but politely.*\n",
     "* *Major decisions will be made after discussion and must be approved by all team members. Minor decisions will be made by the individuals assigned to the certain parts of the project. If decisions need to be made in a short time frame and certain team members are unresponsive or unavailable, the remaining team members can do what they see fit.*\n",
     "* *Tasks will be assigned based on the relevant skills of the team members and what tasks team members want to do. Team members are expected to be aware of progress in parts of the project that are not their own.*\n",
-    "* *If team members can not complete their portions of the project due to sickness, injury, or emergency, they should let the group know as soon as possible and the other team members should try their best to help complete the portion. If team members are not completing their portions without proper explanation, the group should call them out and ask them to step up.*\n",
+    "* *If team members can not complete their portions of the project due to sickness, injury, or emergency, they should let the group know as soon as possible and the other team members should try their best to help complete the portion. If team members are not completing their portions without proper explanation, the group should call them out and ask them to step up.*\n"
    ]
   },
   {
