--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -164,13 +164,11 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/20  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 11/1  |  12 PM | Think about research question and read over feedback from project proposal  | Discuss checkpoint 1, assign group members to specific parts, discuss data wrangling | \n",
+    "| 11/8  |  12 PM |  Halfway progress to check point 1 | Peer review each other’s sections, Discuss Analysis Plan, Discuss data cleaning | \n",
+    "| 11/15 | 12 PM  | Read over requirements for checkpoint 2  | Review/Edit wrangling/EDA; Discuss Analysis Plan; discuss, visualizations, Assign group members to lead each specific part   |\n",
+    "| 12/6  | 12 PM  | Finish checkpoint 2, review requirements for final project | Peer review each other’s sections, Discuss Video and Final Project guidelines, complete visualizations   |\n",
+    "| 12/11 | 12 PM  | Finish all components of project | Final Review of Project, last minute edits, submit project |\n"
    ]
   }
  ],
