--- a/ProjectProposal_Group019-FA24.ipynb
+++ b/ProjectProposal_Group019-FA24.ipynb
@@ -104,8 +104,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The ideal dataset would be one that included every NYT bestseller from 2020 to 2023 in the 'Paperback Nonfiction' category (around 150-300 books) along with current events going on at the time, author credibility/experience, number of reviews on Goodreads, number of awards received, whether it appeared on a celebrity book club list, and the publication timing/season. Another variable that could be useful would be one that showed how popular the book was during it's time on the list of bestsellers, preferably based off of hundreds or even thousands of reviews. The data would be collected through various website using web-scraping to find the info desired. The data would be stored in a large table. \n",
-    "1. There doesn't appear to be a dataset that nicely has most or all the information we need, so we'll most likely be web-scraping for the different bits of information using the list of past bestsellers. https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/"
+    "1. The ideal dataset would be one that included every NYT bestseller from 2020 to 2023 in the 'Paperback Nonfiction' category along with current events going on at the time, author credibility/experience, number of reviews on Goodreads, number of awards received, whether it appeared on a celebrity book club list, and the publication timing/season. Another variable that could be useful would be one that showed how popular the book was during it's time on the list of bestsellers, preferably based off of hundreds or even thousands of reviews. The data would be collected through various website using web-scraping to find the info desired. The data would be stored in a large table. \n",
+    "1. There doesn't appear to be a dataset that nicely has most or all the information we need, so we'll most likely be web-scraping for the different bits of information.\n",
+    "   - This link leads to the list of all the NYT bestsellers during 2020 through 2023: https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/\n",
+    "   - This link leads to a potential book club website that can show if certain bestsellers appeared on said book club lists: https://reesesbookclub.com/picks\n",
+    "   - This link leads to a site that can show multiple desired pieces of data, such as number of reviews or the publication season: https://www.goodreads.com/"
    ]
   },
   {
@@ -119,10 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A bias that may be present in our data is in the factors of appearance on a celebrity book club list and number of reader reviews on goodreads because other factors can influence participation in these forums. Potential factos could be age, class, level of online activity. To mitigate this potential bas we will clearly label factors that might have population bias.\n\n",
-    "Another ethical concern with our project is equitable representation of different demographic groups. Our project focuses on books in the Paperback Nonfiction genre that have reached bestseller status. An issue with this is that our analysis may intentionally favor certain authors and books with access to larger marketing campaigns. To combat this we will not generalize our findings to the overall genre of nonfiction and focus on the New York Times Bestsellers only.\n\n",
-    "Another issue that may arise is privacy concerns when collecting data from The New York Times. When web-scraping, we will ensure to follow The New York Times' terms of use and not include any user-identifiable information in our project.\n\n",
-    "We will report any potential biases in our report in order to be transparent with readers of our project. We will check for bias in our data pre-analysis, during analysis, and post-analysis by identifying any skew in the data used and highlight it in our report. Additionally, when drawing conclusions from our analysis, we will position them as correlations rather than causations in order to acknowledge the limitations of conclusions that can de drawn with our data set.\n\n"
+    "A bias that may be present in our data is in the factors of appearance on a celebrity book club list and number of reader reviews on goodreads because other factors can influence participation in these forums. Potential factos could be age, class, level of online activity. To mitigate this potential bas we will clearly label factors that might have population bias.\n",
+    "\n",
+    "Another ethical concern with our project is equitable representation of different demographic groups. Our project focuses on books in the Paperback Nonfiction genre that have reached bestseller status. An issue with this is that our analysis may intentionally favor certain authors and books with access to larger marketing campaigns. To combat this we will not generalize our findings to the overall genre of nonfiction and focus on the New York Times Bestsellers only.\n",
+    "\n",
+    "Another issue that may arise is privacy concerns when collecting data from The New York Times. When web-scraping, we will ensure to follow The New York Times' terms of use and not include any user-identifiable information in our project.\n",
+    "\n",
+    "We will report any potential biases in our report in order to be transparent with readers of our project. We will check for bias in our data pre-analysis, during analysis, and post-analysis by identifying any skew in the data used and highlight it in our report. Additionally, when drawing conclusions from our analysis, we will position them as correlations rather than causations in order to acknowledge the limitations of conclusions that can de drawn with our data set.\n",
+    "\n"
    ]
   },
   {
@@ -155,7 +162,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
