added NYT info csv with all titles from 2020 to 2023

--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Neha Nair\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
@@ -142,12 +142,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Year on List</th>\n",
+       "      <th>Rank on List</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I Heard You Paint Houses</td>\n",
+       "      <td>Charles Brandt</td>\n",
+       "      <td>Steerforth</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No One Is Too Small To Make A Difference</td>\n",
+       "      <td>Greta Thunberg</td>\n",
+       "      <td>Penguin</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sapiens</td>\n",
+       "      <td>Yuval Noah Harari</td>\n",
+       "      <td>Harper Perennial</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Just Mercy</td>\n",
+       "      <td>Bryan Stevenson</td>\n",
+       "      <td>Spiegel &amp; Grau</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Born A Crime</td>\n",
+       "      <td>Trevor Noah</td>\n",
+       "      <td>Spiegel &amp; Grau</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Title              Author  \\\n",
+       "0                  I Heard You Paint Houses      Charles Brandt   \n",
+       "1  No One Is Too Small To Make A Difference      Greta Thunberg   \n",
+       "2                                   Sapiens   Yuval Noah Harari   \n",
+       "3                                Just Mercy     Bryan Stevenson   \n",
+       "4                              Born A Crime         Trevor Noah   \n",
+       "\n",
+       "           Publisher   Year on List   Rank on List  \n",
+       "0         Steerforth           2020              1  \n",
+       "1            Penguin           2020              2  \n",
+       "2   Harper Perennial           2020              3  \n",
+       "3     Spiegel & Grau           2020              4  \n",
+       "4     Spiegel & Grau           2020              5  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION \n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"NYTinfo.csv\")\n",
+    "df.head()"
    ]
   },
   {
@@ -256,9 +353,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
