Updated data feedback, Added section for celebrity book list

--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -137,12 +137,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Project Proposal Feedback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before collecting data, we originally thought there would only be 150-300 books to look at. However it seems that there are over 3000 books to look at, although there were many repeats for each week. If there happens to be any missing data or discrepencies, we will leave the missing data as N/A and tailor our analysis based on which data is missing and how much of it is missing.\n",
+    "\n",
+    "For our potential dataset we plan to have 12 variables: book title, author, publisher, year on list, rank on list, # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads.\n",
+    "\n",
+    "Here are some links showing where different parts of the data were taken from:\n",
+    "- Book Title (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Author (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Publisher (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Year on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Rank on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Number of weeks on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Whether book contents pertained to current issues (https://www.goodreads.com/)\n",
+    "- Number of awards (https://www.goodreads.com/)\n",
+    "- Publication season (https://www.goodreads.com/)\n",
+    "- Appearance on a celebrity book club list (https://www.booklistqueen.com/oprah-winfrey-books/) (https://reesesbookclub.com/article/4eRlfCOXueqPrm6ZnQpzwl)\n",
+    "- Number of previous bestseller books by the author (https://www.goodreads.com/)\n",
+    "- Average rating on Goodreads (https://www.goodreads.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dataset #1 (use name instead of number here)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +201,7 @@
        "      <th>Publisher</th>\n",
        "      <th>Year on List</th>\n",
        "      <th>Rank on List</th>\n",
+       "      <th>On a Celebrity Reading List</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -181,6 +212,7 @@
        "      <td>Steerforth</td>\n",
        "      <td>2020</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -189,6 +221,7 @@
        "      <td>Penguin</td>\n",
        "      <td>2020</td>\n",
        "      <td>2</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -197,6 +230,7 @@
        "      <td>Harper Perennial</td>\n",
        "      <td>2020</td>\n",
        "      <td>3</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -205,6 +239,7 @@
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>2020</td>\n",
        "      <td>4</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -213,28 +248,29 @@
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>2020</td>\n",
        "      <td>5</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      Title              Author  \\\n",
-       "0                  I Heard You Paint Houses      Charles Brandt   \n",
-       "1  No One Is Too Small To Make A Difference      Greta Thunberg   \n",
-       "2                                   Sapiens   Yuval Noah Harari   \n",
-       "3                                Just Mercy     Bryan Stevenson   \n",
-       "4                              Born A Crime         Trevor Noah   \n",
+       "                                      Title             Author  \\\n",
+       "0                  I Heard You Paint Houses     Charles Brandt   \n",
+       "1  No One Is Too Small To Make A Difference     Greta Thunberg   \n",
+       "2                                   Sapiens  Yuval Noah Harari   \n",
+       "3                                Just Mercy    Bryan Stevenson   \n",
+       "4                              Born A Crime        Trevor Noah   \n",
        "\n",
-       "           Publisher   Year on List   Rank on List  \n",
-       "0         Steerforth           2020              1  \n",
-       "1            Penguin           2020              2  \n",
-       "2   Harper Perennial           2020              3  \n",
-       "3     Spiegel & Grau           2020              4  \n",
-       "4     Spiegel & Grau           2020              5  "
+       "          Publisher  Year on List  Rank on List  On a Celebrity Reading List  \n",
+       "0        Steerforth          2020             1                        False  \n",
+       "1           Penguin          2020             2                        False  \n",
+       "2  Harper Perennial          2020             3                        False  \n",
+       "3    Spiegel & Grau          2020             4                        False  \n",
+       "4    Spiegel & Grau          2020             5                        False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,17 +287,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset #2 (if you have more than one, use name instead of number here)"
+    "### Checking if a book has been on a celebrity book club list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "# Read the DataFrame with book titles\n",
+    "df = pd.read_csv('NYTinfo.csv')\n",
+    "\n",
+    "# Initialize the WebDriver (make sure the path to your WebDriver is correct)\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "#Oprah Winfrey's List\n",
+    "def get_book_titles_from_site(url):\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Wait for the page to load completely (adjust the sleep time as needed)\n",
+    "    time.sleep(5)\n",
+    "\n",
+    "    # Extract book titles from the website (assuming they are within <h3 class=\"book-title\">)\n",
+    "    book_elements = driver.find_elements(By.CSS_SELECTOR, 'h3.book-title a')\n",
+    "    \n",
+    "    # Get the text from each book link\n",
+    "    book_titles = [book.text for book in book_elements]\n",
+    "    \n",
+    "    return book_titles\n",
+    "\n",
+    "def check_book_in_csv(book_titles, df):\n",
+    "    # Check if each book title from the CSV is in the list of titles from the website\n",
+    "    df['On Oprah Winfrey\\'s List'] = df['Title'].apply(lambda title: any(book.lower() == title.lower() for book in book_titles))\n",
+    "    \n",
+    "    # Save the updated DataFrame to a new CSV\n",
+    "    df.to_csv('updated_books.csv', index=False)\n",
+    "\n",
+    "# Oprah Winfrey Book List\n",
+    "site_url = 'https://www.booklistqueen.com/oprah-winfrey-books/'  \n",
+    "\n",
+    "# Get the list of book titles from the website\n",
+    "book_titles_from_site = get_book_titles_from_site(site_url)\n",
+    "\n",
+    "# Cross-reference with the CSV and add a new column indicating if the book is on the list\n",
+    "check_book_in_csv(book_titles_from_site, df)\n",
+    "\n",
+    "# Reese Witherspoon's List\n",
+    "def get_book_titles_from_site(url):\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Wait for the page to load completely (adjust the sleep time as needed)\n",
+    "    time.sleep(5)\n",
+    "\n",
+    "    # Extract book titles from the website (assuming they are within <span class=\"css-h011xd\">)\n",
+    "    book_elements = driver.find_elements(By.CSS_SELECTOR, 'span.css-h011xd')\n",
+    "    \n",
+    "    book_titles = []\n",
+    "    for book in book_elements:\n",
+    "        text_content = book.text\n",
+    "        \n",
+    "        # Extract the quoted part of the text (the book title)\n",
+    "        match = re.search(r'[“\"”]([^“\"”]+)[“\"”]', text_content)\n",
+    "        if match:\n",
+    "            formatted_string = match.group(1).lower()\n",
+    "            book_titles.append(formatted_string)\n",
+    "\n",
+    "    return book_titles\n",
+    "\n",
+    "def check_book_in_csv(book_titles, df):\n",
+    "    # Check if each book title from the CSV is in the list of titles from the website\n",
+    "    df['On Reese Witherspoon\\'s List'] = df['Title'].apply(lambda title: any(book == title.lower() for book in book_titles))\n",
+    "    \n",
+    "    # Save the updated DataFrame to a new CSV\n",
+    "    df.to_csv('updated_books2.csv', index=False)\n",
+    "\n",
+    "# Define the URL of the website you want to scrape\n",
+    "site_url = 'https://reesesbookclub.com/article/4eRlfCOXueqPrm6ZnQpzwl'  # Replace with the actual site URL\n",
+    "\n",
+    "# Get the list of book titles from the website\n",
+    "book_titles_from_site = get_book_titles_from_site(site_url)\n",
+    "\n",
+    "# Cross-reference with the CSV and add a new column indicating if the book is on the list\n",
+    "check_book_in_csv(book_titles_from_site, df)\n",
+    "\n",
+    "# Close the WebDriver\n",
+    "driver.quit()\n",
+    "\n",
+    "# Combining new datasets into original dataset\n",
+    "df1 = pd.read_csv('updated_books.csv')\n",
+    "df2 = pd.read_csv('updated_books2.csv')\n",
+    "df3 = pd.read_csv('NYTinfo.csv')\n",
+    "\n",
+    "df1['On Reese Witherspoon\\'s List'] = df2['On Reese Witherspoon\\'s List']\n",
+    "df1.reset_index(drop=True)\n",
+    "df3['On a Celebrity Reading List'] = df1['On Reese Witherspoon\\'s List'] | df1['On Oprah Winfrey\\'s List']\n",
+    "print(df3)\n",
+    "df3.to_csv('NYTinfo.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For some reason the selenium imports don't work on Datahub. However, they do work on my machine by using the code above to get data from the internet."
    ]
   },
   {
