fixed research question and hypothesis

--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -42,11 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-  Include a specific, clear data science question.\n",
-    "-  Make sure what you're measuring (variables) to answer the question is clear\n",
+    "What specific factors have most contributed to novels in the 'Paperback Nonfiction' category dominating the 'New York Times Bestseller' list in the time frame from 2020 to 2023?\n",
     "\n",
-    "What is your research question? Include the specific question you're setting out to answer. This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences)\n",
-    "\n"
+    "By dominating the 'New York Times Bestseller' list, we are referring to novels maintaining top rankings on the list for the longest number of weeks. The factors we will be exploring are the inclusion of current events in the novel, author credibility/experience (determined by whether the author has had previous 'New York Times Bestseller' books), average ratings (Goodreads), number of awards received, appearance on a celebrity book club list, and publication timing (season). Using our research, authors aiming for recognition on the 'New York Times Bestseller' list in this genre may consider certain inclusions, such as references to current events, in their work, while publishers can identify effective marketing strategies to reach a wider audience."
    ]
   },
   {
@@ -94,12 +92,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our null hypothesis is that none of the factors (inclusion of current events, author credibility, average ratings, number of awards received, appearance on a celebrity book club list, or publication timing/season) significantly influence a novel's likelihood of dominating the 'New York Times Bestseller' list for the 'Paperback Nonfiction' category in the time frame from 2020 to 2023.\n",
+    "Our alternative hypothesis is that at least one of the factors significantly influences a novel's likelihood of dominating the 'New York Times Bestseller' list for the 'Paperback Nonfiction' category in the time frame from 2020 to 2023. We will be using a significance level (alpha) of 0.05, as this has been conventionally accepted as the threshold to discriminate significant from non-significant results in statistical testing.\n",
     "\n",
-    "- Include your team's hypothesis\n",
-    "- Ensure that this hypothesis is clear to readers\n",
-    "- Explain why you think this will be the outcome (what was your thinking?)\n",
-    "\n",
-    "What is your main hypothesis/predictions about what the answer to your question is? Briefly explain your thinking. (2-3 sentences)"
+    "In particular, we think that the inclusion of current events most significantly impacts a paperback nonfiction book's likelihood of maintaining a top position on the 'New York Times Bestseller' list.\n",
+    "We believe that people are more likely to read nonfiction novels that relate to or are concerning current events, especially during pivotal moments in history, such as during election seasons.\n",
+    "Since our data set includes a presidential election year, 2020, we think this factor would strongly impact the likelihood of a nonfiction novel gaining popularity and becoming a 'New York Times Bestseller' from 2020 to 2023.\n",
+    "Essentially, we are assuming that people who aren't regular nonfiction readers would typically only become interested in this genre when seeking to increase their awareness of current events."
    ]
   },
   {
