--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -115,39 +115,22 @@
    "metadata": {},
    "source": [
     "## Data overview\n",
-    "\n",
-    "For each dataset include the following information\n",
     "- Dataset #1\n",
     "  - Dataset Name:\n",
     "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
-    "- Dataset #2 (if you have more than one!)\n",
-    "  - Dataset Name:\n",
-    "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
-    "- etc\n",
+    "  - Number of observations: 3135   \n",
+    "  - Number of variables: 12\n",
     "\n",
-    "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n",
-    "\n",
-    "If you plan to use multiple datasets, add a few sentences about how you plan to combine these datasets."
+    "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Project Proposal Feedback"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before collecting data, we originally thought there would only be 150-300 books to look at. However it seems that there are over 3000 books to look at, although there were many repeats for each week. If there happens to be any missing data or discrepencies, we will leave the missing data as N/A and tailor our analysis based on which data is missing and how much of it is missing.\n",
+    "Before collecting data, we originally thought there would be 150-300 observations in our dataset; our rationale was that there are only around 75 unique 'Paperback Nonfiction' novels on the 'New York Times Bestseller' list per year and our dataset spans 4 years. However, our current dataset includes over 3000 observations, with many title repeats, because we would like to take into consideration the change in rank per week and the number of weeks that a certain novel remained on the list in the time frame from 2020-2023. If there happens to be any missing data or discrepencies, we will leave the missing data as N/A and tailor our analysis based on which data is missing and how much of it is missing. \n",
     "\n",
-    "For our potential dataset we plan to have 12 variables: book title, author, publisher, year on list, rank on list, # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads.\n",
+    "For our potential dataset, we have 12 variables: book title, author, publisher, year on list, rank on list, # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads. For the book title, author, publisher, year on list, and rank on list variables, the observations are in a string format, although we may convert the year on list and rank on list observations to an int format while performing data analysis (easier to perform calculations with ints). The data pertaining to these five variables was manually pulled from _The New York Times_ website (https://www.nytimes.com/books/best-sellers/), and we specifically looked at the weekly lists published for the 'Paperback Nonfiction' category from January 5, 2020 to December 31, 2023.\n",
     "\n",
     "Here are some links showing where different parts of the data were taken from:\n",
     "- Book Title (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
@@ -173,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +186,7 @@
        "      <th>Year on List</th>\n",
        "      <th>Rank on List</th>\n",
        "      <th>On a Celebrity Reading List</th>\n",
+       "      <th>Current Context</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -214,6 +198,7 @@
        "      <td>2020</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -223,6 +208,7 @@
        "      <td>2020</td>\n",
        "      <td>2</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -232,6 +218,7 @@
        "      <td>2020</td>\n",
        "      <td>3</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -241,6 +228,7 @@
        "      <td>2020</td>\n",
        "      <td>4</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -250,6 +238,7 @@
        "      <td>2020</td>\n",
        "      <td>5</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -263,15 +252,22 @@
        "3                                Just Mercy    Bryan Stevenson   \n",
        "4                              Born A Crime        Trevor Noah   \n",
        "\n",
-       "          Publisher  Year on List  Rank on List  On a Celebrity Reading List  \n",
-       "0        Steerforth          2020             1                        False  \n",
-       "1           Penguin          2020             2                        False  \n",
-       "2  Harper Perennial          2020             3                        False  \n",
-       "3    Spiegel & Grau          2020             4                        False  \n",
-       "4    Spiegel & Grau          2020             5                        False  "
+       "          Publisher  Year on List  Rank on List  On a Celebrity Reading List  \\\n",
+       "0        Steerforth          2020             1                        False   \n",
+       "1           Penguin          2020             2                        False   \n",
+       "2  Harper Perennial          2020             3                        False   \n",
+       "3    Spiegel & Grau          2020             4                        False   \n",
+       "4    Spiegel & Grau          2020             5                        False   \n",
+       "\n",
+       "  Current Context  \n",
+       "0              No  \n",
+       "1             Yes  \n",
+       "2             Yes  \n",
+       "3             Yes  \n",
+       "4             Yes  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
