--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Checking if a book has been on a celebrity book club list"
+    "### Celebrity Book Club List Data Wrangling"
    ]
   },
   {
