--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Celebrity Book Club List Data Wrangling"
+    "### 'Celebrity Book Club List' Variable Data Wrangling"
    ]
   },
   {
