--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "- Neha Nair\n",
     "- Navyaa Gupta\n",
-    "- Iron Man\n",
+    "- Satya Rajendra\n",
     "- Thor\n",
     "- Wasp"
    ]
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 'Celebrity Book Club List' Variable Data Wrangling"
+    "### Checking if a book has been on a celebrity book club list"
    ]
   },
   {
